# zkfrag

./: .gitignore  Makefile.am  README  ast_node.cpp  ast_node.hpp  ast_parser.cpp  ast_parser.hpp  command.cpp  command.hpp  configure.ac  fragment.zkf  interpreter.cpp  interpreter.hpp  lexer.l  libdark-test_runner.sh  libdark.pc.in  main.cpp  make.sh  parser.y  scanner.hpp  scanner.l  snazzle.l  snazzle.y
data/: simple.zkf
include/: libdark.hpp
include/libdark/: error.hpp
include/libdark/impl/parser/: ast_driver.ipp  ast_node.ipp  ast_parser_base.ipp
include/libdark/impl/pirromean/: gate.ipp  keypair.ipp  model.ipp  portal.ipp  witness.ipp
include/libdark/math/: sha256_combine.hpp
include/libdark/parser/: ast_driver.hpp  ast_node.hpp  ast_parser_base.hpp
include/libdark/parser/master/: location.hh  position.hh
include/libdark/pirromean/: gate.hpp  keypair.hpp  model.hpp  portal.hpp  witness.hpp
include/libdark/sigma/: ast_node.hpp  ast_parser.hpp  check_rules.hpp  sigma_ast_node.hpp  sigma_ast_parser.hpp  variables_map.hpp  variables_parser.hpp
include/libdark/utility/: assert.hpp
src/: error.cpp
src/math/: sha256_combine.cpp
src/parser/: ast_parser_base.cpp
src/sigma/: ast_node.cpp  ast_parser.cpp  check_rules.cpp  sigma_ast_driver.hpp  sigma_ast_node.cpp  sigma_ast_parser.cpp  variables_map.cpp
src/sigma/parser/: ast_parser_driver.cpp  ast_parser_driver.hpp  parser.y  scanner.hpp  scanner.l
test/: main.cpp
test/math/: sha256_combine.cpp
tools/grammer/: compiler.py  generate_grammar.py  grammer.y
tools/grammer/templates/: parser.y  scanner.hpp  scanner.l  sigma_ast_driver.hpp  sigma_ast_node.cpp  sigma_ast_node.hpp  sigma_ast_parser.cpp  sigma_ast_parser.hpp
tools/zkfrag/: main.cpp
